# repodiff

./: .cursorrules  .gitignore  Cargo.toml  LICENSE  README.md  build.bat  config.json  gitdiff4llm.py  instructions.txt  repodiff.py  repodiff_launcher.py  requirements-dev.txt  setup.py
.cursor/rules/: general.mdc
ai-workspace/: core-prd.md  progress.md  ui-prd.md  work_in_progress.md
ai-workspace/core/: prd.md
ai-workspace/ui/: prd.md
repodiff/: __init__.py  __main__.py  cli.py  repodiff.py
repodiff/filters/: __init__.py  filter_manager.py
repodiff/utils/: __init__.py  config_manager.py  diff_parser.py  git_operations.py  token_counter.py
src/: cli.rs  error.rs  lib.rs  main.rs  repodiff.rs
src/filters/: csharp_parser.rs  filter_manager.rs  mod.rs
src/utils/: config_manager.rs  diff_parser.rs  git_operations.rs  token_counter.rs
tests/: __init__.py  config_manager_test.rs  diff_parser_test.rs  filter_manager_test.rs  git_operations_test.rs  test_config_manager.py  test_diff_parser.py  test_filter_manager.py  test_git_operations.py  test_token_counter.py  token_counter_test.rs
