[package]
name = "repodiff"
version = "0.4.1"
edition = "2024"
authors = ["christso"]
description = "A tool for generating optimized git diffs for LLM analysis"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
regex = "1.10.3"
tempfile = "3.10.0"
tiktoken-rs = "0.5.8"
fnmatch-regex = "0.2.0"
thiserror = "1.0.57"
tree-sitter = "0.20.10"
tree-sitter-c-sharp = "0.20.0"
